feat: run eslint - add run --fix option

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "generate": "node convenience/generate-component/index.js",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:yml",
     "lint:ts": "eslint ./ --ext .ts,.tsx",
+    "lint:ts --fix": "eslint ./ --ext .ts,.tsx --fix",
     "lint:js": "eslint ./ --ext .js",
+    "lint:js --fix": "eslint ./ --ext .js --fix",
     "lint:yml": "eslint ./ --ext .yml,.yaml",
     "semantic-release": "semantic-release",
     "start:stencil": "stencil build --prod --watch --docs",
