--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "chromatic": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --exit-once-uploaded",
     "chromatic:master": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --auto-accept-changes",
     "generate": "node convenience/generate-component/index.js",
-    "lint": "npm run lint:ts && npm run lint:js && npm run lint:yml",
+    "lint": "npm-run-all --sequential lint:*",
     "lint:ts": "eslint ./ --ext .ts,.tsx",
     "lint:js": "eslint ./ --ext .js",
     "lint:yml": "eslint ./ --ext .yml,.yaml",
@@ -84,7 +84,6 @@
     "npm-run-all": "^4.1.5",
     "puppeteer": "14.1.1",
     "semantic-release": "~19.0.2",
-    "semantic-release-slack-bot": "~3.5.0",
     "shelljs": "^0.8.4",
     "simple-git": "~3.7.1",
     "stencil-inline-svg": "^1.1.0",
