--- a/.releaserc
+++ b/.releaserc
@@ -13,21 +13,10 @@
     ["@semantic-release/git", {
       "assets": [
         "package.json",
-        "package-lock.json",
         "CHANGELOG.md"
       ],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github",
-    [
-      "semantic-release-slack-bot",
-      {
-        "notifyOnSuccess": true,
-        "notifyOnFail": true,
-        "onSuccessTemplate": {
-          "text": "`$package_name`: `$npm_package_version`"
-        }
-      }
-    ]
+    "@semantic-release/github"
   ]
 }
