build: fix deps

--- a/package.json
+++ b/package.json
@@ -42,30 +42,30 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/core": "~7.17.0",
-    "@babel/plugin-syntax-jsx": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "~7.17.3",
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@babel/core": "^7.18.0",
+    "@babel/plugin-syntax-jsx": "^7.17.12",
+    "@babel/plugin-transform-react-jsx": "^7.17.12",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
     "@pxblue/storybook-rtl-addon": "~1.1.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@stencil/core": "~2.15.0",
     "@stencil/sass": "~1.5.2",
-    "@storybook/addon-a11y": "~6.5.3",
-    "@storybook/addon-essentials": "~6.4.1",
-    "@storybook/html": "~6.5.3",
+    "@storybook/addon-a11y": "~6.5.4",
+    "@storybook/addon-essentials": "~6.5.4",
+    "@storybook/html": "~6.5.4",
     "@types/jest": "27.4.1",
     "@types/puppeteer": "5.4.6",
-    "@typescript-eslint/eslint-plugin": "~5.23.0",
-    "@typescript-eslint/parser": "~5.23.0",
+    "@typescript-eslint/eslint-plugin": "~5.25.0",
+    "@typescript-eslint/parser": "~5.25.0",
     "axios": "~0.27.2",
     "babel-loader": "^8.1.0",
     "chromatic": "~6.5.1",
     "copy-webpack-plugin": "~6.0.0",
     "esbuild": "~0.14.2",
-    "eslint": "~8.15.0",
+    "eslint": "~8.16.0",
     "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-yaml": "^0.5.0",
@@ -74,22 +74,23 @@
     "husky": "~8.0.1",
     "jest": "~27.5.1",
     "jest-cli": "27.5.1",
-    "jsx-dom": "^7.0.1",
+    "jsx-dom": "^7.0.4",
     "jsx-transform": "~2.4.1",
     "lyne-design-tokens": "^3.20.3",
-    "lyne-helper-eslint-config": "~1.0.1",
+    "lyne-helper-eslint-config": "^1.0.7",
     "lyne-helper-trigger-travis": "~1.0.3",
-    "lyne-icons": "^4.33.0",
+    "lyne-icons": "^4.34.2",
     "minimist": "~1.2.5",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "14.1.0",
-    "semantic-release": "~17.4.2",
+    "puppeteer": "14.1.1",
+    "semantic-release": "~19.0.2",
     "semantic-release-slack-bot": "~3.5.0",
     "shelljs": "^0.8.4",
     "simple-git": "~3.7.1",
     "stencil-inline-svg": "^1.1.0",
     "storybook-addon-breakpoints": "~1.0.0",
     "typescript": "~4.6.2",
+    "webpack": "^4.46.0",
     "yargs": "~17.5.0"
   },
   "author": "Lyne Team",
