--- a/.github/actions/download-artifacts-from-workflow/action.yml
+++ b/.github/actions/download-artifacts-from-workflow/action.yml
@@ -16,7 +16,7 @@ runs:
             const fs = require('fs');
             const artifacts = '${{ inputs.artifacts }}'.split(/[, ]+/);
             console.log(`Attempting to download artifacts ${artifacts.join(', ')}`);
-            const workflowArtifacts = await github.actions.listWorkflowRunArtifacts({
+            const workflowArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
                run_id: context.payload.workflow_run.id,
