--- a/.github/workflows/assign-issues-to-project.yml
+++ b/.github/workflows/assign-issues-to-project.yml
@@ -1,5 +1,5 @@
 # This workflow assigns our default project to new issues
-name: Assign new issues to default project's todo column
+name: Assign new issues to default project's Funnel column
 on:
   issues:
     types: [opened]
@@ -8,8 +8,8 @@ jobs:
   add-new-issues-to-project-column:
     runs-on: ubuntu-latest
     steps:
-    - name: assign-new-issue-to-project
-      uses: docker://takanabe/github-actions-automate-projects:sandbox
+    - name: add-new-issues-to-organization-based-project-column
+      uses: docker://takanabe/github-actions-automate-projects:v0.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITHUB_PROJECT_URL: https://github.com/orgs/lyne-design-system/projects/4
