--- a/.github/workflows/continuous-integration-secure.yml
+++ b/.github/workflows/continuous-integration-secure.yml
@@ -1,6 +1,6 @@
 name: Continuous Integration Secure
 # Secure execution of continuous integration jobs
-# which are performed upon completion of the 
+# which are performed upon completion of the
 # "Continuous Integration" workflow
 # https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
 on:
@@ -12,8 +12,8 @@ jobs:
   codecov:
     runs-on: ubuntu-latest
     if: >
-      ${{ github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success' }}
+      github.event.workflow_run.event == 'pull_request' &&
+      github.event.workflow_run.conclusion == 'success'
     steps:
       - uses: actions/checkout@v3
       - name: Download artifacts
