--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     if: >
-      ${{ github.event.workflow_run.event == 'push' &&
-      github.event.workflow_run.conclusion == 'success' }}
+      github.event.workflow_run.event == 'push' &&
+      github.event.workflow_run.conclusion == 'success'
     steps:
+      - name: 'Log workflow_run'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            console.log(context);
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
@@ -35,6 +40,7 @@ jobs:
         run: yarn -s semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create versioned storybook
         run: STORYBOOK_COMPONENTS_VERSION=$(cat .version) npm run build:storybook
