--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -78,7 +78,7 @@ jobs:
 
   chromatic:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' }}
+    if: github.event_name == 'pull_request'
     needs: [build, lint, test]
     steps:
       - uses: actions/checkout@v3
@@ -98,7 +98,7 @@ jobs:
 
   netlify:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+    if: github.event_name == 'push'
     needs: [build, lint, test]
     steps:
       - uses: actions/checkout@v3
@@ -119,7 +119,7 @@ jobs:
 
   netlify-deployments:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' }}
+    if: github.event_name == 'pull_request'
     needs: [build, lint, test]
     steps:
       - uses: actions/checkout@v3
