--- a/package.json
+++ b/package.json
@@ -53,20 +53,19 @@
     "@semantic-release/git": "^10.0.1",
     "@stencil/core": "~2.16.1",
     "@stencil/sass": "~1.5.2",
-    "@storybook/addon-a11y": "~6.5.6",
-    "@storybook/addon-essentials": "~6.5.6",
-    "@storybook/html": "~6.5.6",
+    "@storybook/addon-a11y": "~6.5.7",
+    "@storybook/addon-essentials": "~6.5.7",
+    "@storybook/html": "~6.5.7",
     "@types/jest": "27.5.1",
     "@types/puppeteer": "5.4.6",
-    "@typescript-eslint/eslint-plugin": "~5.27.0",
-    "@typescript-eslint/parser": "~5.27.0",
+    "@typescript-eslint/eslint-plugin": "~5.27.1",
+    "@typescript-eslint/parser": "~5.27.1",
     "axios": "~0.27.2",
     "babel-loader": "^8.1.0",
     "chromatic": "~6.5.1",
-    "copy-webpack-plugin": "~6.4.1",
     "esbuild": "~0.14.42",
     "eslint": "~8.17.0",
-    "eslint-plugin-jest": "^26.4.6",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-yaml": "^0.5.0",
     "focus-visible": "~5.2.0",
@@ -89,7 +88,6 @@
     "stencil-inline-svg": "^1.1.0",
     "storybook-addon-breakpoints": "~1.0.0",
     "typescript": "~4.7.2",
-    "webpack": "^5.72.1",
     "yargs": "~17.5.0"
   },
   "author": "Lyne Team",
@@ -100,5 +98,6 @@
   },
   "bugs": {
     "url": "https://github.com/lyne-design-system/lyne-components/issues"
-  }
+  },
+  "dependencies": {}
 }
