--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@brightlayer-ui/storybook-rtl-addon": "~1.1.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
+    "@sbb-esta/lyne-design-tokens": "^0.1.2",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -80,7 +81,6 @@
     "jest-cli": "27.5.1",
     "jsx-dom": "^7.0.4",
     "jsx-transform": "~2.4.1",
-    "lyne-design-tokens": "^3.21.0",
     "lyne-helper-eslint-config": "^1.0.7",
     "lyne-helper-trigger-travis": "~1.0.3",
     "lyne-icons": "^4.34.2",
