--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,11 @@
       "enabled": false
     },
     {
+      "groupName": "esta",
+      "matchPackagePrefixes": ["@sbb-esta/"],
+      "prPriority": "10"
+    },
+    {
       "groupName": "eslint",
       "matchPackagePrefixes": ["@typescript-eslint/", "eslint"]
     },
