ci: fix renovate config
Closes #1260

--- a/renovate.json
+++ b/renovate.json
@@ -17,7 +17,7 @@
     {
       "groupName": "esta",
       "matchPackagePrefixes": ["@sbb-esta/"],
-      "prPriority": "10"
+      "prPriority": 10
     },
     {
       "groupName": "eslint",
