chore(deps): disable renovate for node version
As version 14 is still a requirement to run storybook / stencil, don't update it.

--- a/renovate.json
+++ b/renovate.json
@@ -28,6 +28,11 @@
     {
       "matchPackageNames": ["renovate"],
       "extends": ["schedule:monthly"]
+    },
+    {
+      "nodenv": {
+        "enabled": false
+      }
     }
   ]
 }
