build: add stylelint deps to renovate group

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@brightlayer-ui/storybook-rtl-addon": "1.1.0",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
-    "@namics/stylelint-bem": "^7.0.0",
+    "@namics/stylelint-bem": "7.0.0",
     "@sbb-esta/lyne-design-tokens": "0.2.0",
     "@stencil/core": "2.17.0",
     "@stencil/sass": "1.5.2",
@@ -96,10 +96,10 @@
     "standard-version": "9.5.0",
     "stencil-inline-svg": "1.1.0",
     "storybook-addon-breakpoints": "1.0.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-prettier-scss": "^0.0.1",
-    "stylelint-config-standard-scss": "^4.0.0",
-    "stylelint-scss": "^4.2.0",
+    "stylelint": "14.9.1",
+    "stylelint-config-prettier-scss": "0.0.1",
+    "stylelint-config-standard-scss": "4.0.0",
+    "stylelint-scss": "4.2.0",
     "typescript": "4.7.4",
     "yargs": "17.5.1"
   },
