--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "build": "npm-run-all --sequential build:stencil build:storybook",
     "chromatic": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --exit-once-uploaded",
     "chromatic:master": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --auto-accept-changes",
-    "generate": "node convenience/generate-component/index.js",
     "format": "prettier \"**/*\" --write --ignore-unknown",
+    "generate": "node convenience/generate-component/index.js",
+    "integrity": "npm-run-all --sequential build:stencil format",
     "lint": "npm-run-all --sequential lint:*",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:js": "eslint \"**/*.js\"",
