refactor: refactor css and remove unused controller properties

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -50,6 +50,7 @@
         ]
       }
     ],
-    "number-max-precision": 12
+    "number-max-precision": 12,
+    "value-no-vendor-prefix": [true, { "ignoreValues": ["box"] }]
   }
 }
