chore: remove nvm from renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
   "nodenv": {
     "enabled": false
   },
+  "nvm": {
+    "enabled": false
+  },
   "lockFileMaintenance": {
     "schedule": ["before 7am on monday"],
     "enabled": true
