--- a/.github/ISSUE_TEMPLATE/story.yml
+++ b/.github/ISSUE_TEMPLATE/story.yml
@@ -18,6 +18,7 @@ body:
         What needs to be done, in order to close this issue.
       value: |
         - [ ] Component is implemented
+        - [ ] Documentation is provided
         - [ ] Tests are implemented
         - [ ] E2E Tests are implemented
         - [ ] Storybook stories are implemented
