chore: add react-output-target

--- a/package.json
+++ b/package.json
@@ -161,5 +161,8 @@
     "*.{scss}": [
       "stylelint --fix"
     ]
+  },
+  "dependencies": {
+    "@stencil/react-output-target": "^0.3.1"
   }
 }
