--- a/package.json
+++ b/package.json
@@ -163,6 +163,6 @@
     ]
   },
   "dependencies": {
-    "@stencil/react-output-target": "^0.3.1"
+    "@stencil/react-output-target": "^0.3.1",
   }
 }
