--- a/package.json
+++ b/package.json
@@ -171,5 +171,9 @@
     "*.{scss}": [
       "stylelint --fix"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^2.29.1",
+    "date-fns-tz": "^1.3.6"
   }
 }
