--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
     "stylelint-config-standard-scss": "5.0.0",
     "stylelint-scss": "4.3.0",
     "typescript": "4.7.4",
-    "yargs": "17.5.1"
+    "yargs": "17.5.1",
+    "date-fns": "^2.29.1",
+    "date-fns-tz": "^1.3.6"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
