--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "5.0.0",
     "stylelint-scss": "4.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4",
     "yargs": "17.5.1"
   },
