--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
   "scripts": {
     "build:stencil": "stencil build --ci --prod --docs",
     "build:storybook": "build-storybook --quiet",
-    "build": "npm-run-all --sequential build:stencil build:storybook",
-    "chromatic": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --exit-once-uploaded",
-    "chromatic:master": "chromatic --storybook-build-dir=./storybook-static --exit-zero-on-changes --auto-accept-changes",
+    "build:react": "cd react-library && tsc -p .",
+    "build": "npm-run-all --sequential build:stencil build:storybook build:react",
     "format": "prettier \"**/*\" --write --ignore-unknown",
     "generate": "node convenience/generate-component/index.js",
     "integrity": "npm-run-all --sequential build:stencil format",
@@ -38,7 +37,7 @@
     "lint:styles": "stylelint \"**/*.scss\"",
     "start:stencil": "stencil build --prod --watch --docs",
     "start:storybook": "start-storybook -p 6006 -s dist",
-    "start": "npm-run-all --sequential build:stencil --parallel start:stencil start:storybook",
+    "start": "npm-run-all --sequential build:stencil build:react --parallel start:stencil start:storybook",
     "test:dev": "stencil test --spec --e2e --coverage",
     "test:prod": "stencil test --prod --spec --e2e --coverage",
     "test:watch": "stencil test --spec --e2e --watchAll",
@@ -54,14 +53,17 @@
     "@namics/stylelint-bem": "7.0.0",
     "@sbb-esta/lyne-design-tokens": "0.2.2",
     "@stencil/core": "2.17.4",
+    "@stencil/react-output-target": "0.3.1",
     "@stencil/sass": "1.5.2",
     "@storybook/addon-a11y": "6.5.10",
     "@storybook/addon-essentials": "6.5.10",
     "@storybook/html": "6.5.10",
     "@types/jest": "27.5.2",
     "@types/puppeteer": "5.4.6",
-    "@typescript-eslint/eslint-plugin": "5.36.1",
-    "@typescript-eslint/parser": "5.36.1",
+    "@types/react": "16.14.30",
+    "@types/react-dom": "16.9.16",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
     "axios": "0.27.2",
     "babel-loader": "8.2.5",
     "chromatic": "6.8.0",
@@ -87,6 +89,8 @@
     "postcss": "8.4.16",
     "prettier": "2.7.1",
     "puppeteer": "15.5.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "shelljs": "0.8.5",
     "simple-git": "3.13.0",
     "standard-version": "9.5.0",
@@ -99,6 +103,9 @@
     "ts-node": "10.9.1",
     "typescript": "4.7.4",
     "yargs": "17.5.1"
+  },
+  "resolutions": {
+    "**/@types/react": "16.14.30"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
