feat: initial implementation sbb-pearl-chain-vertical

--- a/package.json
+++ b/package.json
@@ -176,5 +176,9 @@
     "*.{scss}": [
       "stylelint --fix"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^1.3.7"
   }
 }
