--- a/.prettierignore
+++ b/.prettierignore
@@ -6,4 +6,5 @@ storybook-static
 src/components.d.ts
 src/components/*/readme.md
 src/global/core/components/*/readme.md
+convenience/generate-component/boilerplate/readme.md
 react-library
