--- a/react-library/tsconfig.json
+++ b/react-library/tsconfig.json
@@ -9,7 +9,8 @@
     "removeComments": false,
     "sourceMap": true,
     "skipLibCheck": true,
-    "jsx": "preserve",
+    "jsx": "react",
+    "jsxFactory": "React.createElement",
     "paths": {
       "@sbb-esta/lyne-components": [".."],
       "@sbb-esta/lyne-components/*": ["../*"]
