--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lyne-helper-trigger-travis": "1.0.6",
     "lyne-icons": "4.40.0",
     "minimist": "1.2.6",
+    "netlify-cli": "11.7.1",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
