--- a/react-library/package.json
+++ b/react-library/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@sbb-esta/lyne-components": "0.0.0-PLACEHOLDER"
   },
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
