fix: distribute the react package as commonjs

--- a/react-library/tsconfig.json
+++ b/react-library/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
+    "module": "CommonJS",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "outDir": "dist",
