--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "stylelint-scss": "4.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "yargs": "17.6.0"
+    "yargs": "17.6.0",
+    "date-fns": "^2.29.1"
   },
   "resolutions": {
     "**/@types/react": "16.14.32"
