feat(sbb-menu): introduce sbb-menu component (#1378)

--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "@stencil/sass": "2.0.0",
     "@storybook/addon-a11y": "6.5.12",
     "@storybook/addon-essentials": "6.5.12",
+    "@storybook/addon-interactions": "6.5.12",
     "@storybook/html": "6.5.12",
+    "@storybook/jest": "0.0.10",
+    "@storybook/testing-library": "0.0.13",
     "@types/jest": "27.5.2",
     "@types/puppeteer": "5.4.7",
     "@types/react": "16.14.32",
